Added documentation for doc-to-txt and ner

--- a/code/jupyter-notebooks/docx-to-txt.ipynb
+++ b/code/jupyter-notebooks/docx-to-txt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -24,13 +24,15 @@
     }
    ],
    "source": [
+    "# Directory containing .docx files\n",
+    "\n",
     "data_dir = os.path.join('..', '..', 'dataset', 'rental-agreement', 'kaggle-rental-agreements-dataset')\n",
     "print(data_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -84,6 +86,8 @@
     }
    ],
    "source": [
+    "# Convert each .docx to a string\n",
+    "\n",
     "agreements = list()\n",
     "for fname in os.listdir(data_dir):\n",
     "    print(fname)\n",
@@ -92,6 +96,8 @@
     "    paragraphs = doc.paragraphs\n",
     "    \n",
     "    text = ''\n",
+    "    \n",
+    "    # Put a line space between two paras\n",
     "    for p in paragraphs:\n",
     "        text += str(p.text) + '\\n\\n'\n",
     "    agreements.append(text)"
@@ -99,10 +105,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Write the strings to txt file separately\n",
+    "\n",
     "for i, agr in enumerate(agreements):\n",
     "    with open(os.path.join(data_dir, '..', 'txt', str(i)+'.txt'), 'w+', encoding='utf-8') as f:\n",
     "        f.write(agr)"
