Added code for NER using HuggingFace NER, BERT-NER

--- a/code/jupyter-notebooks/spacy-ner.ipynb
+++ b/code/jupyter-notebooks/spacy-ner.ipynb
@@ -65,7 +65,7 @@
     "    \n",
     "    for entity in entities:\n",
     "        ent_texts.append(\n",
-    "            tuple((entity.text, entity.start_char, str(entity.end_char), entity.label_)))\n",
+    "            tuple((entity.text, entity.start_char, entity.end_char, entity.label_)))\n",
     "   \n",
     "    return ent_texts"
    ]
